truncate fixin

--- a/app/assets/stylesheets/pages/_browsing.scss
+++ b/app/assets/stylesheets/pages/_browsing.scss
@@ -298,7 +298,7 @@
 
     [dir="rtl"] & {
       right: auto;
-      left: 0;
+      left: $bs2;
     }
 
     @media screen and (min-width: $tablet) {
@@ -328,7 +328,7 @@
 
     a {
       color: $basic-font;
-      border-color: $basic-font;
+      border: none;
     }
   }
 }
@@ -405,7 +405,7 @@
 
     @media screen and (min-width: $desktop) {
       width: 25%;
-      height: 23em;
+      height: 24em;
     }
 
     @media screen and (min-width: $big-desktop) {
@@ -453,6 +453,7 @@
   }
 
   .business-name {
+    line-height: 1.4;
     margin: $bs-5 0;
     font-weight: bold;
 
